tests/neg-custom-args/captures/try2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try2.scala:31:32 -----------------------------------------
31 |    (x: CanThrow[Exception]) => () => raise(new Exception)(using x)  // error
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                Found:    (() => Nothing) retains x
   |                                Required: () => Nothing

longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try2.scala:38:6 ------------------------------------------
38 |      () => // error
   |      ^
   |      Found:    (() => Int) retains x
   |      Required: () => Int
39 |        raise(new Exception)(using x)
40 |        22

longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try2.scala:49:4 ------------------------------------------
49 |    () => // error
   |    ^
   |    Found:    (() => Int) retains x
   |    Required: () => Int
50 |      raise(new Exception)(using x)
51 |      22

longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/try2.scala:24:28 --------------------------------------------------------------
24 |  val a = handle[Exception, CanThrow[Exception]] { // error
   |                            ^^^^^^^^^^^^^^^^^^^
   |                            type argument is not allowed to capture the global capability (canThrow : *)
